--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My addresses</title>
+      <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
       <td><p>My email : melihalcik9@gmail.com</p></td>
