--- a/my_hobbies.html
+++ b/my_hobbies.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <title>My Hobbies</title>
   </head>
+    <link rel="stylesheet" href="css/styles.css">
   <body>
 
-        
+
         <h3>Chief's Hobbies</h3>
         <ol>
           <li> <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fgfycat.com%2Fcheapthriftydairycow&psig=AOvVaw0MA6xCAUuuldPbHv9sMdvA&ust=1668966879213000&source=images&cd=vfe&ved=0CA8QjRxqFwoTCLDTs57ouvsCFQAAAAAdAAAAABAE">Killing monsters</a> </li>
